using System;

namespace HarmelLaw.JusticeApp
{
    public class Defendant
    {
    }
}