@startuml
hide empty members
hide empty methods

package Investigation {

    class PublicProsecutionService {
        PreChargeDecisionCase ReceiveRequestForPreChargeDecision (PoliceInvestigation)
    }

    class CriminalOffence {
    }

    class PoliceInvestigation {
    }

    class PreChargeDecisionCase {
    }

    class Suspect {
    }

}

package Preparation {

    class PublicProsecutionService {
        CriminalCase AcceptCaseFile (PoliceCaseFile)
    }

    class CriminalCase {
    }

    class Defendant {
    }

    class PoliceCaseFile {
    }
}

class PNCId {
}

Suspect *-- "*" CriminalOffence

PoliceCaseFile *-- PNCId

PoliceCaseFile *-- Defendant

PoliceInvestigation *-- "*" Suspect

PoliceInvestigation *-- "*" PNCId

PreChargeDecisionCase *-- "*" Suspect

PreChargeDecisionCase *-- "*" PNCId

PreChargeDecisionCase *-- "*" OffenceAdvice

CriminalCase *-- "*" Defendant

PreChargeDecisionService --> PreChargeDecisionCase : <<creates>>

PreChargeDecisionService --> PoliceInvestigationDetails : <<uses>>

TrialPreparationService --> CriminalCase : <<creates>>

TrialPreparationService --> PoliceCaseFile : <<uses>>
@enduml
